--- a/PERMANOVA vs PLS-DA.Rmd
+++ b/PERMANOVA vs PLS-DA.Rmd
@@ -14,6 +14,8 @@ It seems like PERMANOVA is pretty good at doing discriminant analyses.  When is 
  - Do the above test with a different method of generating discriminating variables.
  
  - Look up DDA post-hoc test for permanova.
+ 
+ - *Do same exact test but with `chemhelper::sim_multvar` to figure out what is wrong with it.
 
 # Setup
 ## Load packages
@@ -79,7 +81,7 @@ sim.vcov <- function(p_noise,
   if(p_signal > 0){
     S_signal <- matrix(rep(cov_signal, p_signal^2), ncol = p_signal)
     # diag(S_signal) <- 1
-    set.seed(seed)
+    set.seed(seed+1)
     # data_signal <- mvrnorm(n = N, Sigma = S_signal, mu = rep(0, p_signal)) %>%
     #   as.data.frame()
     S_signal_B <- S_signal_A <- S_signal
@@ -100,14 +102,14 @@ sim.vcov <- function(p_noise,
   
   # make data for group A
   diag(S_disc) <- group_vars[1]
-  set.seed(seed)
+  set.seed(seed+2)
   means_A <- rep((diff_disc/2), p_disc)
   data_A <- mvrnorm(n = N/2, mu = means_A, Sigma = S_disc) %>%
     as.data.frame()
   
   # make data for group B
   diag(S_disc) <- group_vars[2]
-  set.seed(seed+1)
+  set.seed(seed+3)
   means_B <- rep(-1*(diff_disc/2), p_disc)
   data_B <- mvrnorm(n = N/2, mu = means_B, Sigma = S_disc) %>%
     as.data.frame()
@@ -170,7 +172,8 @@ p1.permanova <- ggplot(comparison1) +
   geom_density(aes(permanova), fill = "green", alpha = 0.33) +
   labs(x = "p value") +
   geom_vline(xintercept = 0.05, linetype = 5) +
-  ggtitle("PERMANOVA")
+  ggtitle("PERMANOVA") +
+  xlim(0, 0.6)
 # p1.permanova
 
 p1.plsda <- ggplot(comparison1) +
@@ -244,13 +247,12 @@ p2 <- plot_grid(p2.permanova, p2.plsda)
 
 ```{r}
 scenario1 <- plot_grid(p1, p2, ncol = 1, labels = c("cov = 0.2", "cov = 0.6"))
-
+scenario1
 ```
 
-PLS-DA performs better than PERMANOVA when:
+~~PLS-DA performs better than PERMANOVA when there are many co-varying variables not related to response variable.  This make sense because it is analagous to ANOVA but uses covariances.  So the ratio of the within group covariance to the between group covariance shrinks when there are a bunch of highly correlated variables not related to group membership, yeah?~~
 
-- many co-varying variables not related to response variable
-- especially when co-variance among discriminating variables is high
+This was an artifact created by the same seed being used for multiple pieces of the dataset.  That made them correlated when they shouldn't be.
 ```
 sim.vcov(p_noise = 10,
   p_signal = 25,
